Fixed Opacity on iOS

--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ p {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%); 
+	visibility: visible;
 }
 	
 /* Buttons----------------------------------------------------------------------------- */
